--- a/novi-app/Dockerfile
+++ b/novi-app/Dockerfile
@@ -10,6 +10,6 @@ COPY web web
 RUN ./mvnw clean install -DskipTests
 
 FROM eclipse-temurin:21-jre-alpine
-ARG JAR_FILE=/workspace/novi-app/web/target/*.jar
-COPY --from=compile ${JAR_FILE} app.jar
+ARG APP_JAR=/workspace/novi-app/web/target/*.jar
+COPY --from=compile ${APP_JAR} app.jar
 ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar app.jar ${0} ${@}"]
