--- a/novi-app/web/pom.xml
+++ b/novi-app/web/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.novi</groupId>
-        <artifactId>novi</artifactId>
+        <artifactId>novi-app</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <name>activations</name>
-    <artifactId>activations</artifactId>
+    <name>web</name>
+    <artifactId>web</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -25,18 +25,31 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>org.novi</groupId>
+            <artifactId>activations</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-            <version>3.6.1</version>
+            <groupId>org.novi</groupId>
+            <artifactId>persistence</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
