Fixing casting issue
Adding more rows to sample data

Renaming class names to be consistent

Adding more logging

Clean imports and reformat code

Support both DSL and non DSL activations

Combining into a scala and java maven module  to make release and compilation easier

Fixing package path (fully qualified classname)

No need for maven-jar-plugin
Update README with command to force recreate image

More logging in ComboBooleanActivations
Manually building dependencies folder
Changing Dockerfile to execute main directly as opposed to jar.

ScriptEngine instantiation can be simpler as the classpath is really required to discover engines and does not help with the discovery of activations on classpath.
Also removing the org.novi.dsl.activations dependency as docker build will not find it anyways.

Cleaning imports
Do not autowire scriptEngine
Add new volume to docker image provide dsl activation jars

Changing scope of org.novi.dsl.activations to test

Adding a new row to the sample data with DSL config

Adjust logging level packages

Execute Scala DSL as part of the ComboBooleanActivations, however this commit requires maven dependency on the jar containing the scala activations.

Use ScriptEngine to evaluate Scala DSL

--- a/novi-app/Dockerfile
+++ b/novi-app/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:21-jdk-alpine as compile
+FROM eclipse-temurin:21-jdk-alpine as build
 WORKDIR /workspace/novi-app
 COPY .mvn .mvn
 COPY mvnw .
@@ -10,6 +10,8 @@ COPY web web
 RUN ./mvnw clean install -DskipTests
 
 FROM eclipse-temurin:21-jre-alpine
-ARG APP_JAR=/workspace/novi-app/web/target/*.jar
-COPY --from=compile ${APP_JAR} app.jar
-ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar app.jar ${0} ${@}"]
+WORKDIR /Novi
+ARG BUILD_FOLDER=/workspace/novi-app/web/target
+COPY --from=build ${BUILD_FOLDER}/classes .
+COPY --from=build ${BUILD_FOLDER}/libs libs
+ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -cp .:libs/*:/var/dsl-activations/* org.novi.web.NoviApplication ${0} ${@}"]
