--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,7 @@ services:
     build: novi-app/.
     volumes:
       - ./plugin-activations:/var/plugin-activations
+      - ./dsl-activations:/var/dsl-activations
     ports:
       - "8080:8080"
     environment:
