--- a/novi-app/web/pom.xml
+++ b/novi-app/web/pom.xml
@@ -57,6 +57,7 @@
             <groupId>org.novi.dsl</groupId>
             <artifactId>activations</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
