--- a/novi-app/pom.xml
+++ b/novi-app/pom.xml
@@ -29,4 +29,16 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+    <scm>
+        <developerConnection>scm:git:https://github.com/vdevigere/novi-spring.git</developerConnection>
+    </scm>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.1</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
