Adjusting docker files to build both novi-activations and novi-app and copy the uber jar to the right location.
Fix for jackson dependency issues

Reorganizing files (All activations in separate project called novi-activations)

Tests for the DSL activations

Adding novi-dsl maven project

Fixing the serialization and deser of scala objects.
Also handling null configurations

Remove default implementation of valueOf

Remove default implementation of valueOf

Implementing DateTimeActivation

Rename configuration(String configuration) to valueOf

WIP Conversion of WeightedRandomActivation

Adding a DSL Activation that returns true/false based on the context string passed in.

Removing the Scala activations (moved to separate project novi-dsl). The compiled jar is instead placed in dsl-activations folder

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,10 +3,9 @@ services:
     container_name: novi-app
     restart: always
     depends_on: [ postgres ]
-    build: novi-app/.
+    build: .
     volumes:
       - ./plugin-activations:/var/plugin-activations
-      - ./dsl-activations:/var/dsl-activations
     ports:
       - "8080:8080"
     environment:
